scylla_orm_table_to_struct/example/src/non_compiling_code/non_existing_table.rs
use scylla_orm_macro::query;

fn main() {
    query!("select * from idontexist");
}